--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "clarifai": "^2.9.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongoose": "^5.4.1"
